--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -15,11 +15,11 @@ jobs:
           version: "~= 22.0"
 
   ci-tests:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11"]
-    name: Windows CI
+        python-version: ["3.11"]
+    name: Linux CI
     steps:
       - name: Check out source repository
         uses: actions/checkout@v3
@@ -27,8 +27,6 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-      # - name: Windows-specific Python environment workaround
-      #   run: python -m pip install --upgrade pip==21.3.1
       - name: Python environment report
         run: python -c "import sys; print(sys.version)"
       - name: Run ${{ matrix.python-version }} platform tests (default)
