--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -14,34 +14,15 @@ jobs:
           src: "./src"
           version: "~= 22.0"
 
-  ci-tests:
+  flake8-lint:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["3.11"]
-    name: Linux CI
+    name: Lint
     steps:
       - name: Check out source repository
         uses: actions/checkout@v3
-      - name: Set up Python ${{ matrix.python-version }} environment
+      - name: Set up Python environment
         uses: actions/setup-python@v4
         with:
-          python-version: ${{ matrix.python-version }}
-      - name: Python environment report
-        run: python -c "import sys; print(sys.version)"
-      - name: Run ${{ matrix.python-version }} platform tests (default)
-        uses: py-actions/flake8@master
-        with:
-          path: "tests/test-default.py" # have to restrict because there are other tests with flake8 fails
-       - name: Run ${{ matrix.python-version }} platform tests (with args)
-         uses: py-actions/flake8@master
-         with:
-           update-pip: "true"
-           ignore: "F401"
-           exclude: "tests/test.py"
-           max-line-length: "100"
-           args: "--quiet"
-           path: "tests/test-args.py"
-           flake8-version: "main"
-           plugins: "flake8-bugbear==22.1.11 flake8-black"
-  
+          python-version: "3.11"
+      - name: flake8 Lint
+        uses: py-actions/flake8@v2
